[gd_scene load_steps=6 format=3 uid="uid://dlqm10204rcaq"]

[ext_resource type="Script" uid="uid://i83dg8esqcf0" path="res://hook/hook_rope_model.gd" id="1_7wu5d"]
[ext_resource type="Material" uid="uid://c1pmji506ltee" path="res://hook/hook_lock.tres" id="2_se4dw"]

[sub_resource type="CylinderMesh" id="CylinderMesh_2uiuu"]
top_radius = 0.05
bottom_radius = 0.05
height = 1.0
radial_segments = 4
cap_top = false
cap_bottom = false

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_8746b"]
albedo_color = Color(0.827451, 0.78039217, 0.42745098, 1)
metallic_specular = 0.0
emission_enabled = true
emission = Color(1, 0.9490196, 0.16470589, 1)
emission_on_uv2 = true

[sub_resource type="CylinderMesh" id="CylinderMesh_7wu5d"]
top_radius = 0.0
bottom_radius = 0.025
height = 0.1

[node name="HookRopeModel" type="Node3D"]
script = ExtResource("1_7wu5d")

[node name="Rope" type="Node3D" parent="."]
unique_name_in_owner = true

[node name="RopeMesh" type="MeshInstance3D" parent="Rope"]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 0, -0.5)
cast_shadow = 0
mesh = SubResource("CylinderMesh_2uiuu")
skeleton = NodePath("../..")
surface_material_override/0 = SubResource("StandardMaterial3D_8746b")

[node name="LockModel" type="Node3D" parent="Rope"]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -0.6821266)

[node name="MeshInstance3D" type="MeshInstance3D" parent="Rope/LockModel"]
transform = Transform3D(-4.371139e-08, 1, 0, -1, -4.371139e-08, 0, 0, 0, 1, -0.12, 0, 0.063)
cast_shadow = 0
mesh = SubResource("CylinderMesh_7wu5d")
surface_material_override/0 = ExtResource("2_se4dw")

[node name="MeshInstance3D2" type="MeshInstance3D" parent="Rope/LockModel"]
transform = Transform3D(-4.371139e-08, -1, 0, 1, -4.371139e-08, 0, 0, 0, 1, 0.12, 0, 0.063)
cast_shadow = 0
mesh = SubResource("CylinderMesh_7wu5d")
surface_material_override/0 = ExtResource("2_se4dw")

[node name="HookEnd" type="Node3D" parent="."]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -1)
